day3/eks/k8s/05.ingress/ingress.yml
---
apiVersion: v1
kind: Service
metadata:
    name: flask-service-nodeport
    namespace: jhsong-namespace
spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      nodePort: 30031
    selector:
        app: flask
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: flask-ingress
    namespace: jhsong-namespace
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: flask-service-nodeport
          servicePort: 80
